2459 mirroredtypeexceptions occur when using config generator annotations (#2461)
* Fixed issue with MirroredTypeExceptions for array and object fields defining class.

* fixed test case being platform dependent

---------

Co-authored-by: Kalev Gonvick <kalev.gonvick@outlook.com>